# HFT

./: .gitignore  CMakeLists.txt  fills.csv  pnl_series.csv  test_events.hftrec  test_ticks.hftdb
examples/: binance_btc_mm.cpp  bybit_multiasset_mm.cpp  optimize_and_analyze.cpp  production_workflow.cpp
include/: adaptive_smart_order_router.hpp  analytics.hpp  arbitrage_execution_planner.hpp  arbitrage_executor.hpp  arbitrage_risk_guard.hpp  binance_adapter.hpp  bybit_adapter.hpp  child_order_adapter_handoff.hpp  child_order_commands.hpp  child_order_manager.hpp  config.hpp  cross_exchange_arbitrage.hpp  distributed_optimizer.hpp  event_recorder.hpp  event_source.hpp  exchange.hpp  exchange_adapter.hpp  exchange_bus.hpp  exchange_bus_bridge.hpp  exchange_bus_metrics.hpp  exchange_dispatcher.hpp  exchange_gateway.hpp  exchange_transport.hpp  execution.hpp  execution_engine.hpp  execution_quality_analytics.hpp  execution_simulator.hpp  fast_book.hpp  feed_coordinator.hpp  fill_probability_engine.hpp  fill_simulator.hpp  gap_recovery_engine.hpp  hft.hpp  inventory_manager.hpp  latency.hpp  live_replay.hpp  lock_free_market_data_cache.hpp  lock_free_ring_buffer.hpp  market_data_engine.hpp  market_data_gateway.hpp  (+28 more)
include/tickdb/: metadata.hpp  query.hpp  replay.hpp  segment.hpp
src/: main.cpp
tests/: test_advanced.cpp  test_all.cpp  test_exchange_bus_production.cpp  test_modules.cpp
